--- a/views/page/halaman-admin.ejs
+++ b/views/page/halaman-admin.ejs
@@ -9,6 +9,8 @@
    <title>Halaman Admin</title>
    <link rel="icon" href="img/logo-icon.png" type="image/x-icon">
    <link rel="stylesheet" href="css/custom-style.css">
+   <link rel="stylesheet" href="css/penentuan-style.css">
+
 </head>
 
 <body>
